@@ -38,6 +38,11 @@
 <p>2019-02-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pict.c (DecodeImage): Avoide a one-byte over-read of
+pixels heap allocation.  The cause of the over-read is not yet
+understood.  Fixes oss-fuzz 12019
+&quot;graphicsmagick/coder_PICT_fuzzer: Heap-buffer-overflow in
+ExpandBuffer&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/wpg.c (ReadWPGImage): Assure that all colormap entries
 are initialized.  Fixes oss-fuzz 12614
 &quot;graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
